-- Noteworthy changes in version 1.1.5 (2017-??-?)
o) The ':', and ',' nickname delimiters work again
o) Fixed a bug where the hopm process couldn't be restarted under certain
   conditions
o) The hopm process can now be restarted from the command line via "kill -HUP"
o) Added --enable-efence switch to allow easy linking with the
   electric fence memory debugger library


-- Noteworthy changes in version 1.1.4 (2017-04-05)
o) IPv6 blacklist support has been implemented
o) The CHECK command now accepts IPv6 addresses
o) The negative cache has been rewritten to use latest Net::Patricia
   C sources and does support IPv6 now
o) Further code cleanups and optimizations


-- Noteworthy changes in version 1.1.3 (2016-09-26)
o) Allow inclusion of other configuration files in the main hopm.conf
   file. See doc/reference.conf for further information on how to use
   the new .include configuration directive.


-- Noteworthy changes in version 1.1.2 (2016-05-15)
o) Fixed archaic bug which can cause the scanner to either detect nothing or
   to detect everything and therefore even kill legit clients


-- Noteworthy changes in version 1.1.1 (2016-01-03)
o) Added 'command_queue_size', 'command_interval', and 'command_timeout',
   configuration directives to the options {} block. See doc/reference.conf
   for more information.
o) Various updates to the reference.conf; added updated 'connregex' directives
   for ircd-hybrid in conjunction with user mode +F (far connect notices), and
   UnrealIRCd 4.0.0, which now uses a different format for connect notices
o) Minor code cleanups


-- Noteworthy changes in version 1.1.0 (2015-08-07)
o) options::pidfile and options::scanlog can now be relative pathnames
o) Due to security reasons the PROTOCOLS command has been removed again


-- Noteworthy changes in version 1.1.0beta1 (2015-07-02)
o) Added HTTPS support for SSL/TLS-enabled HTTP proxies which seem to be
   used quite a lot on IRC nowadays. LibreSSL or OpenSSL 0.9.8o and above