@@ -724,6 +724,29 @@ scanner {
 	 */
 };
 
+/*
+ * Scanner to detect vulnerable SSH versions that normally exist on hacked
+ * routers and IoT devices. Don't forget to add this scanner to a user block.
+ */
+scanner {
+	name = "ssh";
+
+	protocol = SSH:22;
+
+	target_string = "SSH-1.99-OpenSSH_5.1";
+	target_string = "SSH-2.0-dropbear_0.51";
+	target_string = "SSH-2.0-dropbear_0.52";
+	target_string = "SSH-2.0-dropbear_0.53.1";
+	target_string = "SSH-2.0-dropbear_2012.55";
+	target_string = "SSH-2.0-dropbear_2013.62";
+	target_string = "SSH-2.0-dropbear_2014.63";
+	target_string = "SSH-2.0-OpenSSH_4.3";
+	target_string = "SSH-2.0-OpenSSH_5.1";
+	target_string = "SSH-2.0-OpenSSH_5.5p1";
+	target_string = "SSH-2.0-ROSSSH";
+	target_string = "SSH-2.0-SSH_Server";
+};
+
 
 /*
  * User blocks define what scanners will be used to scan which hostmasks.
