@@ -27,7 +27,7 @@
 #define OPM_TYPE_DREAMBOX        7
 #define OPM_TYPE_HTTPS           8
 #define OPM_TYPE_HTTPSPOST       9
-
+#define OPM_TYPE_SSH            10
 
 /* States */
 #define OPM_STATE_UNESTABLISHED  1
